attempted to correct bottom spacing

--- a/clientside/src/index.css
+++ b/clientside/src/index.css
@@ -5,6 +5,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-align: center;
+  padding-bottom: 40px;
 }
 
 code {
